TP#32874: Make item name wrap and trim with ellipsis in ScanPackItemControl.

--- a/Code/ShipWorks.OrderLookup/ScanPack/ScanPackItemControl.xaml
+++ b/Code/ShipWorks.OrderLookup/ScanPack/ScanPackItemControl.xaml
@@ -35,7 +35,9 @@
             VerticalAlignment="Center"
             Text="{Binding Name}"
             Margin="10 0 10 0"
-            FontSize="20"/>
+            FontSize="20"
+            TextWrapping="Wrap"
+            TextTrimming="CharacterEllipsis"/>
         <TextBlock
             Grid.Column="2"
             HorizontalAlignment="Right"
