When listening for item scans, show a green check when the scanned text matches a sku for an item in the order that has not been scanned yet. Show error message and icon when scanned text does not match a sku for an item in the order that has not been scanned yet.  When all items in an order have been scanned, show a verified message and icon and start listening for orders again.

--- a/Code/ShipWorks.OrderLookup/ScanPack/ScanControl.xaml
+++ b/Code/ShipWorks.OrderLookup/ScanPack/ScanControl.xaml
@@ -53,7 +53,17 @@
                             Style="{StaticResource OpenBox}"
                             Visibility="{Binding State,
                                         Converter={StaticResource VisibleWhenEqualToParameter},
-                                        ConverterParameter={x:Static scanPack:ScanPackState.ListeningForItemScan}}"/>
+                                        ConverterParameter={x:Static scanPack:ScanPackState.OrderLoaded}}"/>
+                        <Path
+                            Style="{StaticResource CheckboxCircle}"
+                            Visibility="{Binding State,
+                                        Converter={StaticResource VisibleWhenEqualToParameter},
+                                        ConverterParameter={x:Static scanPack:ScanPackState.ScanningItems}}"/>
+                        <Path
+                            Style="{StaticResource CheckboxDecagram}"
+                            Visibility="{Binding State,
+                                        Converter={StaticResource VisibleWhenEqualToParameter},
+                                        ConverterParameter={x:Static scanPack:ScanPackState.OrderVerified}}"/>
                     </Canvas>
                 </Viewbox>
                 <Viewbox Grid.Row="1"
