Show message when item has already been packed. Match item scans to UPC first then SKU. Rename ScannedItems to PackedItems.

--- a/Code/ShipWorks.OrderLookup/ScanPack/PackedControl.xaml
+++ b/Code/ShipWorks.OrderLookup/ScanPack/PackedControl.xaml
@@ -26,7 +26,7 @@
                   FontSize="16"
                   Background="{x:Static SystemColors.ControlBrush}">
             <ItemsControl
-                ItemsSource="{Binding ScannedItems}"
+                ItemsSource="{Binding PackedItems}"
                 ItemTemplate="{StaticResource ItemsToScanTemplate}"
                 Background="{x:Static SystemColors.ControlBrush}"
                 Margin="5"/>
