--- a/Code/ShipWorks.OrderLookup/ScanPack/ScanPackControl.xaml
+++ b/Code/ShipWorks.OrderLookup/ScanPack/ScanPackControl.xaml
@@ -1,10 +1,12 @@
 <UserControl x:Class="ShipWorks.OrderLookup.ScanPack.ScanPackControl"
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
+             xmlns:attachedProperties="clr-namespace:ShipWorks.UI.AttachedProperties;assembly=ShipWorks.UI"
              xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
              xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
              xmlns:orderLookupSearchControl="clr-namespace:ShipWorks.OrderLookup.Controls.OrderLookupSearchControl"
              xmlns:dd="urn:gong-wpf-dragdrop"
+             xmlns:ui="http://schemas.shipworks.com/ui"
              xmlns:scanPack="clr-namespace:ShipWorks.OrderLookup.ScanPack"
              mc:Ignorable="d"
              d:DataContext="{d:DesignInstance scanPack:ScanPackViewModel}"
@@ -19,6 +21,7 @@
             <Style TargetType="{x:Type scanPack:ScanPackControl}">
                 <Setter Property="Background" Value="{StaticResource OrderLookupBackgroundColor}" />
             </Style>
+            <ui:BooleanToVisibilityConverter x:Key="BooleanToVisibilityNegated" Invert="True" />
         </ResourceDictionary>
     </UserControl.Resources>
     <Grid>
@@ -30,7 +33,7 @@
         <orderLookupSearchControl:OrderLookupSearchControl
             Grid.Row="0"
             Margin="10"
-            DataContext="{Binding .}"/>
+            DataContext="{Binding .}" IsEnabled="{Binding Enabled}"/>
         <ScrollViewer
             Grid.Row="1"
             HorizontalScrollBarVisibility="Disabled"
@@ -71,17 +74,34 @@
                     </Style>
                 </Grid.Resources>
 
+                <TextBlock
+                    Panel.ZIndex="1"
+                    Grid.Column="0"
+                    Grid.ColumnSpan="5"
+                    HorizontalAlignment="Center"
+                    VerticalAlignment="Center"
+                    FontSize="32"
+                    Opacity=".7"
+                    FontWeight="Bold"
+                    Visibility="{Binding Enabled, Converter={StaticResource BooleanToVisibilityNegated}}">
+                    Scan and pack is available on warehouse plans.
+                    <Hyperlink NavigateUri="{Binding DisabledLearnMoreUri}" attachedProperties:Link.OpenInBrowser="true">Learn more.</Hyperlink>
+                </TextBlock>
+
                 <scanPack:ItemsToScanControl
                     Grid.Column="0"
                     Margin="4,0,0,0"
-                    DataContext="{Binding .}"/>
+                    DataContext="{Binding .}"
+                    IsEnabled="{Binding Enabled}"/>
                 <scanPack:ScanControl
                     Grid.Column="2"
-                    DataContext="{Binding .}"/>
+                    DataContext="{Binding .}"
+                    IsEnabled="{Binding Enabled}"/>
                 <scanPack:PackedControl
                     Grid.Column="4"
                     Margin="0,0,4,0"
-                    DataContext="{Binding .}"/>
+                    DataContext="{Binding .}"
+                    IsEnabled="{Binding Enabled}"/>
 
                 <GridSplitter Grid.Column="1" DragCompleted="OnGridSplitterDragComplete" />
                 <GridSplitter Grid.Column="3" DragCompleted="OnGridSplitterDragComplete" />
