--- a/Code/ShipWorks.OrderLookup/ScanPack/PackedControl.xaml
+++ b/Code/ShipWorks.OrderLookup/ScanPack/PackedControl.xaml
@@ -4,9 +4,11 @@
              xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
              xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
              xmlns:scanPack="clr-namespace:ShipWorks.OrderLookup.ScanPack"
-             mc:Ignorable="d"
+    	     xmlns:sys="clr-namespace:System;assembly=mscorlib"
+    	     xmlns:ui="http://schemas.shipworks.com/ui"
              d:DataContext="{d:DesignInstance scanPack:ScanPackViewModel}"
-             d:DesignHeight="300" d:DesignWidth="300">
+             d:DesignHeight="300" d:DesignWidth="300"
+	     mc:Ignorable="d">
     <UserControl.Resources>
         <ResourceDictionary>
             <ResourceDictionary.MergedDictionaries>
@@ -16,9 +18,17 @@
             <DataTemplate x:Key="ItemsToScanTemplate">
                 <scanPack:ScanPackItemControl Margin="0 0 0 2"/>
             </DataTemplate>
+            <ui:ValueEqualToParameterConverter x:Key="InvertedValueEqualToParameter" Invert="True" />
         </ResourceDictionary>
     </UserControl.Resources>
     <Grid>
+        <Grid.IsEnabled>
+            <Binding Converter="{StaticResource InvertedValueEqualToParameter}" Path="State">
+                <Binding.ConverterParameter>
+                    <sys:Int64>3</sys:Int64>
+                </Binding.ConverterParameter>
+            </Binding>
+        </Grid.IsEnabled>
         <GroupBox Header="Packed"
                   BorderBrush="Black"
                   FontFamily="Tahoma"
