--- a/Code/ShipWorks.OrderLookup/ScanPack/ScanControl.xaml
+++ b/Code/ShipWorks.OrderLookup/ScanPack/ScanControl.xaml
@@ -48,7 +48,7 @@
                            Margin="0 40 0 50"
                            TextWrapping="Wrap"/>
                 <Viewbox Grid.Row="1"
-                    Width="360" Height="360"
+                    MaxWidth="360" MaxHeight="360"
                     Visibility="{Binding Error, Converter={StaticResource InverseBoolToVis}}">
                     <Canvas Width="24" Height="24" >
                         <Path
@@ -74,7 +74,7 @@
                     </Canvas>
                 </Viewbox>
                 <Viewbox Grid.Row="1"
-                         Width="360" Height="360"
+                         MaxWidth="360" MaxHeight="360"
                          Visibility="{Binding Error, Converter={StaticResource BoolToVis}}">
                     <Canvas Width="24" Height="24" >
                         <Path Style="{StaticResource Alert}"/>
