--- a/Code/ShipWorks.OrderLookup/ScanPack/ScanPackControl.xaml
+++ b/Code/ShipWorks.OrderLookup/ScanPack/ScanPackControl.xaml
@@ -83,14 +83,14 @@
                     Background="LightGray"
                     Padding="6"
                     HorizontalAlignment="Center"
-                    VerticalAlignment="Center">
+                    VerticalAlignment="Center"
+                    Visibility="{Binding Enabled, Converter={StaticResource BooleanToVisibilityNegated}}">
                     <TextBlock
                         HorizontalAlignment="Center"
                         VerticalAlignment="Center"
                         FontSize="32"
                         Opacity=".9"
                         FontWeight="Bold"
-                        Visibility="{Binding Enabled, Converter={StaticResource BooleanToVisibilityNegated}}"
                         Background="LightGray">
                         Scan and pack is available on warehouse plans.
                         <Hyperlink NavigateUri="{Binding DisabledLearnMoreUri}" attachedProperties:Link.OpenInBrowser="true">Learn more.</Hyperlink>
