--- a/Code/ShipWorks.Stores.UI/Platforms/Odbc/Controls/OdbcHubControl.xaml
+++ b/Code/ShipWorks.Stores.UI/Platforms/Odbc/Controls/OdbcHubControl.xaml
@@ -3,77 +3,100 @@
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
              xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
              xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
-             xmlns:local="clr-namespace:ShipWorks.Stores.UI.Platforms.Odbc.Controls"
+             xmlns:system="clr-namespace:System;assembly=mscorlib"
              xmlns:ui="http://schemas.shipworks.com/ui"
              xmlns:viewModels="clr-namespace:ShipWorks.Stores.UI.Platforms.Odbc.ViewModels"
              mc:Ignorable="d"
              d:DataContext="{d:DesignInstance viewModels:OdbcHubViewModel}"
-             d:DesignHeight="500" d:DesignWidth="500">
+             d:DesignHeight="500" d:DesignWidth="500"
+             FontFamily="Tahoma"
+             FontSize="8.25pt"
+             >
     <UserControl.Resources>
         <ResourceDictionary>
-            <ResourceDictionary.MergedDictionaries>
-                <ResourceDictionary Source="/ShipWorks.UI;component/Styles/BlueSteel/BlueSteelStyle.xaml" />
-            </ResourceDictionary.MergedDictionaries>
-
-            <ui:BooleanToVisibilityConverter x:Key="ShowWhenTrue" />
+            <ui:BooleanToVisibilityConverter x:Key="ShowWhenTrue"/>
             <ui:BooleanToVisibilityConverter x:Key="ShowWhenFalse" Invert="True" />
-            <Style TargetType="TextBlock" BasedOn="{StaticResource StandardText}"/>
+            <ui:VisibleWhenEqualToParameterConverter x:Key="ShowWhenNotEqual" Invert="True"/>
+            <ui:RadioButtonCheckedConverter x:Key="RadioButtonCheckedConverter"/>
+            <system:Boolean x:Key="True">True</system:Boolean>
+            <system:Boolean x:Key="False">False</system:Boolean>
+            <Style TargetType="{x:Type RadioButton}">
+                <Setter Property="Margin" Value="22 4 0 4" />
+            </Style>
         </ResourceDictionary>
     </UserControl.Resources>
-    <Grid Margin="10" Grid.IsSharedSizeScope="True">
+    <Grid Margin="20 10 13 10" Grid.IsSharedSizeScope="True">
         <Grid.RowDefinitions>
             <RowDefinition Height="Auto" />
             <RowDefinition Height="*" />
-            <RowDefinition Height="Auto" />
-            <RowDefinition Height="Auto" />
         </Grid.RowDefinitions>
-        <TextBlock Grid.Row="0"
-                   Text="Select the ODBC store you would like to connect to"
-                   Margin="0 0 0 10"/>
-        <ListBox
-            Grid.Row="1"
-            HorizontalContentAlignment="Stretch"
-            ItemsSource="{Binding Stores}"
-            SelectedItem="{Binding SelectedStore}"
-            Visibility="{Binding LoadingFinished, Converter={StaticResource ResourceKey=ShowWhenTrue}}"
-            Style="{StaticResource BlueSteel.ListBox.SingleSelection}">
-            <ListBox.ItemTemplate>
-                <DataTemplate>
-                    <Grid HorizontalAlignment="Stretch">
-                        <Grid.ColumnDefinitions>
-                            <ColumnDefinition Width="Auto" SharedSizeGroup="Name" />
-                            <ColumnDefinition Width="Auto" SharedSizeGroup="Address" />
-                            <ColumnDefinition Width="*" />
-                        </Grid.ColumnDefinitions>
+        <StackPanel Grid.Row="0" Orientation="Vertical">
+            <TextBlock Text="How would you like to setup this ODBC store?"
+                       FontWeight="Bold"
+                       Margin="3 5 0 10"/>
 
-                        <StackPanel
-                            Grid.Column="0"
-                            Margin="0,0,18,4"
-                            VerticalAlignment="Top">
-                            <TextBlock FontSize="14" Text="{Binding Name}" />
-                        </StackPanel>
-                    </Grid>
-                </DataTemplate>
-            </ListBox.ItemTemplate>
-        </ListBox>
-        <TextBlock
-            Grid.Row="1"
-            Margin="4"
-            Text="{Binding Message}"
-            Visibility="{Binding ShowMessage, Converter={StaticResource ResourceKey=ShowWhenTrue}}" />
-        
+            <RadioButton Content="Create a new ODBC store" 
+                         GroupName="newStore"
+                         Margin="22 0 0 10"
+                         VerticalContentAlignment="Center"
+                         IsChecked="{Binding CreateNew,
+                                        Converter={StaticResource RadioButtonCheckedConverter},
+                                        ConverterParameter={StaticResource True}}" />
+            <RadioButton Content="Connect to an existing ODBC store" 
+                         GroupName="newStore"
+                         Margin="22 0 0 0"
+                         VerticalContentAlignment="Center"
+                         IsChecked="{Binding CreateNew,
+                                        Converter={StaticResource RadioButtonCheckedConverter},
+                                        ConverterParameter={StaticResource False}}" />
+        </StackPanel>
+        <Grid Grid.Row="1"
+              Visibility="{Binding CreateNew, Converter={StaticResource ShowWhenFalse}}"
+              Margin="41 15 0 0">
+            <Grid.RowDefinitions>
+                <RowDefinition Height="Auto" />
+                <RowDefinition Height="*" />
+            </Grid.RowDefinitions>
+            <TextBlock Grid.Row="0"
+                       Text="Select the ODBC store you would like to connect to"
+                       Margin="0 0 0 5"/>
+            <ListBox
+                Grid.Row="1"
+                HorizontalContentAlignment="Stretch"                
+                ItemsSource="{Binding Stores}"
+                SelectedItem="{Binding SelectedStore}"
+                SelectionMode="Single">
+                <ListBox.ItemTemplate>
+                    <DataTemplate>
+                        <Grid HorizontalAlignment="Stretch">
+                            <Grid.ColumnDefinitions>
+                                <ColumnDefinition Width="Auto" SharedSizeGroup="Name" />
+                                <ColumnDefinition Width="Auto" SharedSizeGroup="Address" />
+                                <ColumnDefinition Width="*" />
+                            </Grid.ColumnDefinitions>
 
-        <TextBlock
-            Grid.Row="2"
-            Margin="0 10 0 5"
-            Text="Want to add a new ODBC store?"/>
+                            <StackPanel
+                                Grid.Column="0"
+                                Margin="0,0,18,4"
+                                VerticalAlignment="Top">
+                                <TextBlock FontSize="14" Text="{Binding Name}" />
+                            </StackPanel>
+                        </Grid>
+                    </DataTemplate>
+                </ListBox.ItemTemplate>
+            </ListBox>
+            <TextBlock
+                Grid.Row="1"
+                Margin="10"
+                Text="{Binding Message}"
+                HorizontalAlignment="Center"
+                VerticalAlignment="Center"
+                TextWrapping="Wrap"
+                Visibility="{Binding Message, Converter={StaticResource ShowWhenNotEqual}, ConverterParameter={x:Null}}" />
+            <ui:WaitSpinner Grid.Row="1"
+                            Visibility="{Binding LoadingStores, Converter={StaticResource ShowWhenTrue}}"
+                            BorderThickness="0"/>
 
-        <Button
-            Grid.Row="3"
-            Command="{Binding NewStoreCommand}"
-            Content="Add new store"
-            Style="{StaticResource SmallButton}"
-            HorizontalAlignment="Left"
-            Width="150"/>
+        </Grid>
     </Grid>
 </UserControl>
