--- a/Code/ShipWorks.Stores.UI/Platforms/Odbc/Controls/OdbcHubControl.xaml
+++ b/Code/ShipWorks.Stores.UI/Platforms/Odbc/Controls/OdbcHubControl.xaml
@@ -25,7 +25,7 @@
             </Style>
         </ResourceDictionary>
     </UserControl.Resources>
-    <Grid Margin="20 10 13 10" Grid.IsSharedSizeScope="True">
+    <Grid Margin="20 10 13 10">
         <Grid.RowDefinitions>
             <RowDefinition Height="Auto" />
             <RowDefinition Height="*" />
@@ -67,21 +67,10 @@
                 SelectedItem="{Binding SelectedStore}"
                 SelectionMode="Single">
                 <ListBox.ItemTemplate>
-                    <DataTemplate>
-                        <Grid HorizontalAlignment="Stretch">
-                            <Grid.ColumnDefinitions>
-                                <ColumnDefinition Width="Auto" SharedSizeGroup="Name" />
-                                <ColumnDefinition Width="Auto" SharedSizeGroup="Address" />
-                                <ColumnDefinition Width="*" />
-                            </Grid.ColumnDefinitions>
-
-                            <StackPanel
-                                Grid.Column="0"
-                                Margin="0,0,18,4"
-                                VerticalAlignment="Top">
-                                <TextBlock FontSize="14" Text="{Binding Name}" />
-                            </StackPanel>
-                        </Grid>
+                    <DataTemplate>                                                
+                            <TextBlock FontSize="14" 
+                                       Margin="0 3 0 3"                                       
+                                       Text="{Binding Name}" />                            
                     </DataTemplate>
                 </ListBox.ItemTemplate>
             </ListBox>
