TP#33609: Disable the order split options for ecommerce cutomers

--- a/Code/ShipWorks.Stores.UI/Orders/Split/OrderSplitDialog.xaml
+++ b/Code/ShipWorks.Stores.UI/Orders/Split/OrderSplitDialog.xaml
@@ -165,7 +165,7 @@
             </StackPanel>
         </ScrollViewer>
 
-        <StackPanel Grid.Row="3">
+        <StackPanel Grid.Row="3" IsEnabled="{Binding IsHubCustomer}">
             <TextBlock FontWeight="Bold">How would you like this order to ship?</TextBlock>
             <StackPanel Margin="6,6,0,0">
                 <RadioButton Margin="0,0,0,4" IsChecked="{Binding SplitType, Converter={StaticResource RadioButtonChecked}, ConverterParameter={x:Static split:OrderSplitterType.Hub}}">Ship the new order from a different warehouse</RadioButton>
