--- a/Code/ShipWorks.Stores.UI/Orders/Split/OrderSplitDialog.xaml
+++ b/Code/ShipWorks.Stores.UI/Orders/Split/OrderSplitDialog.xaml
@@ -46,7 +46,10 @@
         <StackPanel Grid.Row="0">
             <TextBlock Text="ShipWorks will split the selected order into a new order." TextWrapping="Wrap" />
 
-            <StackPanel Margin="0,8,0,0" Orientation="Horizontal">
+            <StackPanel
+                Margin="0,8,0,0"
+                Orientation="Horizontal"
+                Visibility="{Binding IsChecked, ElementName=ShipOnHub, Converter={StaticResource HideWhenTrue}}">
                 <TextBlock VerticalAlignment="Center" FontWeight="Bold">New Order Number</TextBlock>
                 <TextBlock
                     Margin="8,0,0,0"
@@ -194,7 +197,12 @@
         <StackPanel Grid.Row="3" IsEnabled="{Binding CanChangeSplitType}">
             <TextBlock FontWeight="Bold">How would you like this order to ship?</TextBlock>
             <StackPanel Margin="6,6,0,0">
-                <RadioButton Margin="0,0,0,4" IsChecked="{Binding SplitType, Converter={StaticResource RadioButtonChecked}, ConverterParameter={x:Static split:OrderSplitterType.Reroute}}">Ship the new order from a different warehouse</RadioButton>
+                <RadioButton
+                    x:Name="ShipOnHub"
+                    Margin="0,0,0,4"
+                    IsChecked="{Binding SplitType, Converter={StaticResource RadioButtonChecked}, ConverterParameter={x:Static split:OrderSplitterType.Reroute}}">
+                    Ship the new order from a different warehouse
+                </RadioButton>
                 <RadioButton IsChecked="{Binding SplitType, Converter={StaticResource RadioButtonChecked}, ConverterParameter={x:Static split:OrderSplitterType.Local}}">Ship the new order from this warehouse</RadioButton>
             </StackPanel>
         </StackPanel>
