--- a/Code/ShipWorks.UI/Styles/BlueSteel/FieldManagerStyle.xaml
+++ b/Code/ShipWorks.UI/Styles/BlueSteel/FieldManagerStyle.xaml
@@ -1,9 +1,5 @@
 ﻿<ResourceDictionary xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation" xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml">
-
-    <ResourceDictionary.MergedDictionaries>
-        <ResourceDictionary Source="/ShipWorks.UI;component/Styles/BlueSteel/BlueSteelStyle.xaml" />
-    </ResourceDictionary.MergedDictionaries>
-
+    
     <Style x:Key="PrimaryButton" TargetType="Button">
         <Setter Property="MinWidth" Value="50" />
         <Setter Property="Padding" Value="20,4" />
@@ -99,5 +95,21 @@
                 </ControlTemplate>
             </Setter.Value>
         </Setter>
+    </Style>
+
+    <Style BasedOn="{StaticResource FormCheckBox}" TargetType="{x:Type CheckBox}">
+        <Setter Property="Margin" Value="0" />
+    </Style>
+    <Style x:Key="FieldBorder" TargetType="{x:Type Border}">
+        <Setter Property="MinHeight" Value="24" />
+        <Setter Property="BorderBrush" Value="LightGray" />
+        <Setter Property="BorderThickness" Value="0,1,0,0" />
+        <Setter Property="HorizontalAlignment" Value="Stretch" />
+    </Style>
+    <Style x:Key="FieldListBox" TargetType="{x:Type ItemsControl}">
+        <Setter Property="BorderBrush" Value="Transparent" />
+        <Setter Property="HorizontalContentAlignment" Value="Stretch" />
+        <Setter Property="Padding" Value="0" />
+        <Setter Property="Margin" Value="0" />
     </Style>
 </ResourceDictionary>
