TP#34543: Implement BestRateAccountSettingsViewModel. Implement save and load in BestRateAccountSettingsControlHost.

--- a/Code/ShipWorks.Shipping.UI/Settings/BestRateAccountSettingsControl.xaml
+++ b/Code/ShipWorks.Shipping.UI/Settings/BestRateAccountSettingsControl.xaml
@@ -53,7 +53,7 @@
                                                     Margin="15,4,0,4"
                                                     VerticalContentAlignment="Center"
                                                     IsChecked="{Binding IsActive}">
-                                                <TextBlock Text="{Binding AccountID, Mode=OneTime}" />
+                                                <TextBlock Text="{Binding AccountDescription, Mode=OneTime}" />
                                             </CheckBox>
                                         </Border>
                                     </DataTemplate>
