--- a/Code/ShipWorks.OrderLookup/FieldManager/OrderLookupFieldManagerDialog.xaml
+++ b/Code/ShipWorks.OrderLookup/FieldManager/OrderLookupFieldManagerDialog.xaml
@@ -50,7 +50,7 @@
             <RowDefinition Height="Auto" />
         </Grid.RowDefinitions>
 
-        <TextBlock TextWrapping="Wrap">Choose which fields should be visible in the Order Lookup view.</TextBlock>
+        <TextBlock TextWrapping="Wrap">Choose which fields should be visible in the Ship view.</TextBlock>
 
         <ScrollViewer Grid.Row="1" Margin="0,8">
             <ItemsControl
