Don't show import products UI when products grid is empty because of a search

--- a/Code/ShipWorks.Products.UI/ProductsView.xaml
+++ b/Code/ShipWorks.Products.UI/ProductsView.xaml
@@ -380,6 +380,10 @@
                         Mode="OneWay"
                         Path="Products.IsLoading" />
                     <Binding
+                        Converter="{StaticResource HideWhenTrue}"
+                        Mode="OneWay"
+                        Path="IsSearchActive" />
+                    <Binding
                         Converter="{StaticResource ShowWhenTrue}"
                         Mode="OneWay"
                         Path="Products.Data.IsEmpty" />
