--- a/Code/ShipWorks.Products.UI/ProductsView.xaml
+++ b/Code/ShipWorks.Products.UI/ProductsView.xaml
@@ -10,8 +10,7 @@
     xmlns:syncfusion="http://schemas.syncfusion.com/wpf"
     xmlns:sys="clr-namespace:System;assembly=mscorlib"
     xmlns:ui="http://schemas.shipworks.com/ui"
-    d:DataContext="{d:DesignInstance local:DesignerProductsMode,
-                                     IsDesignTimeCreatable=True}"
+    d:DataContext="{d:DesignInstance local:DesignerProductsMode, IsDesignTimeCreatable=True}"
     d:DesignHeight="500"
     d:DesignWidth="1200"
     FontFamily="/ShipWorks.UI;component/Styles/BlueSteel/#Roboto"
@@ -50,11 +49,10 @@
                     </Setter.Value>
                 </Setter>
             </Style>
-            <ui:BooleanToVisibilityConverter x:Key="ShowWhenTrue" />
-            <ui:BooleanToVisibilityConverter x:Key="HideWhenTrue" Invert="True" />
+            <ui:BooleanToVisibilityConverter x:Key="BooleanToVisibility" />
+            <ui:BooleanToVisibilityConverter x:Key="BooleanToVisibilityInverted" Invert="True" />
             <ui:NumberToWeightStringConverter x:Key="NumberToWeightString" />
             <ui:VisibilityMultiConverter x:Key="VisibilityMulti" />
-            <ui:WpfViewTemplateSelector x:Key="WpfViewTemplateSelector" />
             <sys:Double x:Key="BaseFontSize">14</sys:Double>
         </ResourceDictionary>
     </UserControl.Resources>
@@ -81,16 +79,8 @@
                     Content="Add"
                     Style="{StaticResource PrimaryButton}" />
                 <Button
-                    Command="{Binding CopyAsVariant}"
-                    Content="Create Variant"
-                    Style="{StaticResource PrimaryButton}" />
-                <Button
                     Command="{Binding EditProductVariantButton}"
                     Content="Edit"
-                    Style="{StaticResource PrimaryButton}" />
-                <Button
-                    Command="{Binding ImportProducts}"
-                    Content="Import"
                     Style="{StaticResource PrimaryButton}" />
                 <Button
                     Command="{Binding ExportProducts}"
@@ -105,9 +95,6 @@
                     Content="Mark Inactive"
                     Style="{StaticResource SecondaryButton}" />
             </UniformGrid>
-
-
-
             <syncfusion:SfTextBoxExt
                 Grid.Column="3"
                 MinWidth="300"
@@ -254,13 +241,13 @@
                                     Command="{Binding DataContext.EditProductVariantLink, RelativeSource={RelativeSource AncestorType={x:Type UserControl}}}"
                                     CommandParameter="{Binding Data.ProductVariantID}"
                                     Style="{StaticResource Link}"
-                                    Visibility="{Binding IsLoading, Converter={StaticResource HideWhenTrue}}">
+                                    Visibility="{Binding IsLoading, Converter={StaticResource BooleanToVisibilityInverted}}">
                                     <TextBlock FontSize="{StaticResource BaseFontSize}" Text="{Binding Data.Name}" />
                                 </Button>
                                 <TextBlock
                                     HorizontalAlignment="Left"
                                     VerticalAlignment="Center"
-                                    Visibility="{Binding IsLoading, Converter={StaticResource ShowWhenTrue}}">
+                                    Visibility="{Binding IsLoading, Converter={StaticResource BooleanToVisibility}}">
                                     Loading...
                                 </TextBlock>
                             </Grid>
@@ -279,7 +266,7 @@
                     Header="Dimensions (L x W x H)">
                     <DataGridTemplateColumn.CellTemplate>
                         <DataTemplate>
-                            <Grid Margin="8,0" Visibility="{Binding IsLoading, Converter={StaticResource HideWhenTrue}}">
+                            <Grid Margin="8,0" Visibility="{Binding IsLoading, Converter={StaticResource BooleanToVisibilityInverted}}">
                                 <Grid.Resources>
                                     <Style TargetType="TextBlock">
                                         <Setter Property="VerticalAlignment" Value="Center" />
@@ -344,54 +331,28 @@
                     CanUserSort="True"
                     Header="Active"
                     SortMemberPath="IsActive"
-                    Visibility="{Binding Data.ShowInactiveProducts, Source={StaticResource proxy}, Converter={StaticResource ShowWhenTrue}}">
+                    Visibility="Visible">
                     <DataGridTemplateColumn.CellTemplate>
                         <DataTemplate>
-                            <Path
+                            <ToggleButton
                                 HorizontalAlignment="Center"
                                 VerticalAlignment="Center"
-                                Stroke="Gray"
-                                Style="{StaticResource Path.Checkmark}">
-                                <Path.Visibility>
-                                    <MultiBinding Converter="{StaticResource VisibilityMulti}">
-                                        <Binding Converter="{StaticResource HideWhenTrue}" Path="IsLoading" />
-                                        <Binding Converter="{StaticResource ShowWhenTrue}" Path="Data.IsActive" />
-                                    </MultiBinding>
-                                </Path.Visibility>
-                            </Path>
+                                Style="{StaticResource Path.ActiveToggleButton}" Height="13" Width="28">
+                                <i:Interaction.Triggers>
+                                    <i:EventTrigger EventName="Checked">
+                                        <i:InvokeCommandAction Command="{Binding ActivateProductCommand}" />
+                                    </i:EventTrigger>
+                                    <i:EventTrigger EventName="Unchecked">
+                                        <i:InvokeCommandAction Command="{Binding DeactivateProductCommand}" />
+                                    </i:EventTrigger>
+                                </i:Interaction.Triggers>
+                            </ToggleButton>
                         </DataTemplate>
                     </DataGridTemplateColumn.CellTemplate>
                 </DataGridTemplateColumn>
             </DataGrid.Columns>
         </DataGrid>
-        <Border
-            Grid.Row="1"
-            Margin="24"
-            Padding="16"
-            HorizontalAlignment="Center"
-            VerticalAlignment="Center"
-            BorderBrush="Black"
-            BorderThickness="2"
-            TextBlock.FontSize="{StaticResource BaseFontSize}">
-            <Border.Visibility>
-                <MultiBinding Converter="{StaticResource VisibilityMulti}">
-                    <Binding
-                        Converter="{StaticResource HideWhenTrue}"
-                        Mode="OneWay"
-                        Path="Products.IsLoading" />
-                    <Binding
-                        Converter="{StaticResource HideWhenTrue}"
-                        Mode="OneWay"
-                        Path="IsSearchActive" />
-                    <Binding
-                        Converter="{StaticResource ShowWhenTrue}"
-                        Mode="OneWay"
-                        Path="Products.Data.IsEmpty" />
-                </MultiBinding>
-            </Border.Visibility>
-            <ContentPresenter Content="{Binding ImportProductsSplash.CurrentState}" ContentTemplateSelector="{StaticResource WpfViewTemplateSelector}" />
-        </Border>
-        <ui:WaitSpinner Grid.Row="1" Visibility="{Binding Products.IsLoading, Converter={StaticResource ShowWhenTrue}}">
+        <ui:WaitSpinner Grid.Row="1" Visibility="{Binding Products.IsLoading, Converter={StaticResource BooleanToVisibility}}">
             <TextBlock FontSize="{StaticResource BaseFontSize}">Loading products...</TextBlock>
         </ui:WaitSpinner>
         <Grid
