--- a/Code/ShipWorks.Shipping.UI/Settings/BestRateAccountSettingsControl.xaml
+++ b/Code/ShipWorks.Shipping.UI/Settings/BestRateAccountSettingsControl.xaml
@@ -1,8 +1,8 @@
 ﻿<UserControl x:Class="ShipWorks.Shipping.UI.Settings.BestRateAccountSettingsControl"
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-             xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
-             xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
+             xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
+             xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
              xmlns:settings="clr-namespace:ShipWorks.Shipping.UI.Settings"
              xmlns:ui="http://schemas.shipworks.com/ui"
              xmlns:system="clr-namespace:System;assembly=mscorlib"
@@ -31,7 +31,7 @@
             <TextBlock TextWrapping="Wrap"
                    Grid.Row="1"
                    Margin="15 8 0 4"
-                   Text="Choose the providers and accounts you would like to use with Best Rate"/>
+                   Text="Choose the providers and accounts you would like to use with Best Rate. If multiple accounts are selected for a particular carrier, Best Rate will display the cheapest rate among all selected carrier accounts for each shipping service."/>
 
             <ItemsControl Grid.Row="2"
                 IsTabStop="False"
@@ -49,7 +49,7 @@
                                 FontWeight="Bold"
                                 Text="{Binding Name, Mode=OneTime}" />
                             <ItemsControl
-                                    Grid.Row="1"                                    
+                                    Grid.Row="1"
                                     IsTabStop="False"
                                     ItemsSource="{Binding Accounts, Mode=OneWay}">
                                 <ItemsControl.ItemTemplate>
